# Proteus-Scraper

./: .env.example  .gitignore  .python-version  Makefile  README.md  SETUP.md  alembic.ini  pyproject.toml  scrapy.cfg
.github/workflows/: ci.yml
deploy/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
deploy/gateway/: glider.conf
deploy/observability/: alerts.yml  docker-compose.yml  loki-config.yml  prometheus.yml  promtail-config.yml
deploy/traefik/: dynamic.yml  traefik.yml
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  migration_baseline.md  project-overview.md
migrations/: env.py
migrations/versions/: 20250308_0001_baseline.py  20250309_0002_identity_storage_state.py  20250310_0002_plugins.py  59607ce94a4e_merge_plugin_and_identity_heads.py
plugins/: __init__.py  custom_headers.py  payload_transform.py  pdf_parser.py
scripts/: init_db.py  seed_data.py  wait_for_services.sh
src/api/: auth.py  main.py  routes.py  schemas.py
src/core/: artifacts.py  config.py  db.py  db_sync.py  engine_policy.py  external_api.py  governance.py  identities.py  identity_crypto.py  metrics.py  models.py  proxy.py  queues.py  redis.py  redis_sync.py  security.py  tasks.py  ui_rate_limit.py
src/scraper/: browser_engine.py  detector.py  engine.py  external_engine.py  external_providers.py  fetcher.py  llm_recovery.py  middlewares.py  parsing.py  pipelines.py  plugins.py  runner.py  selector_registry.py  settings.py  vision.py
tests/integration/: conftest.py  mock_target.py  test_escalation.py  test_llm_recovery.py  (+1 more)
web/: app.js  index.html  styles.css
(+16 files in other folders)
