[tool.poetry]
name = "proteus-scraper"
version = "0.1.0"
description = "Proteus-Scraper control and data plane services."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "api", from = "src" },
  { include = "core", from = "src" },
  { include = "scraper", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
scrapy = "^2.11.0"
scrapy-playwright = "^0.0.33"
playwright = "^1.41.0"
arq = "^0.25.0"
redis = "^5.0.1"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
selectolax = "^0.3.16"
instructor = "^0.5.2"
openai = "^1.10.0"
ultralytics = "^8.0.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
boto3 = "^1.34.25"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.2"
ruff = "^0.1.9"
black = "^23.12.1"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
